--- a/EOY API/todo.txt
+++ b/EOY API/todo.txt
@@ -12,6 +12,51 @@
 	*  Vytvoření WPF .net CORE (NE!!! ve framworku)
 	*	Naučení práce s XAMLU ve WPF(Funguje to jako CSS.style)
 	*   zobrazovací panel bude fungovat na vytvorení dynamickeho panelu s pridani dynamicky prvku do COLUMN a rowů v GRIDU(grid NAUČIT!)
+	*   nastavit FORM na fullscreen (helper => 
+
+	XAML:
+	<Window
+    ...
+    WindowStyle="None"
+    WindowState="Maximized"
+    ResizeMode="NoResize">
+    <!-- Zde přidejte obsah vaší aplikace -->
+</Window>)
+C#:
+using System;
+using System.Runtime.InteropServices;
+using System.Windows;
+
+namespace YourNamespace
+{
+    public partial class MainWindow : Window
+    {
+        [DllImport("user32.dll")]
+        private static extern IntPtr FindWindow(string className, string windowTitle);
+
+        [DllImport("user32.dll")]
+        private static extern IntPtr FindWindowEx(IntPtr parentHandle, IntPtr childAfter, string className, string windowTitle);
+
+        [DllImport("user32.dll")]
+        private static extern int ShowWindow(IntPtr hWnd, int cmdShow);
+
+        private const int SW_HIDE = 0;
+        private const int SW_SHOW = 5;
+
+        public MainWindow()
+        {
+            InitializeComponent();
+            Loaded += MainWindow_Loaded;
+        }
+
+        private void MainWindow_Loaded(object sender, RoutedEventArgs e)
+        {
+            // Skryjte lištu Windows
+            IntPtr handle = FindWindow("Shell_TrayWnd", "");
+            ShowWindow(handle, SW_HIDE);
+        }
+    }
+}
 	
 	help: určování row/column gridu, lze určit tak, že zadáš => 
 	<Grid x:Name = "panel" background="white"  >
@@ -73,3 +118,6 @@
 	btn.background = new Brushes(red);
 	grid.children.add(btn);
 	*/
+
+
+
